java changes